# commodore-protocol

./: .gitignore  CHARTER.md  DOCKSIDE-EXAM.md  LICENSE  README.md  STATE.md  cli.py  commodore.py  messages.py  pyproject.toml  unit.py
.github/workflows/: ci.yml
tests/: test_commodore.py
